GNOME Bugzilla – Bug 750428
Null pointer deref in totem_pl_parser_add_itms
Last modified: 2015-06-05 06:58:24 UTC
Created attachment 304623 [details] [review] plparse: Check return from load_http_itunes add_itms does not check the return of load_http_itunes, causing rhythmbox to crash randomly while checking podcasts
Committed to master, thanks for the patch. Attachment 304623 [details] pushed as 9ab937f - plparse: Check return from load_http_itunes