plparse: Check return from load_http_itunes

https://bugzilla.gnome.org/show_bug.cgi?id=750428